--- a/gatsby/tutorial-part-three/package.json
+++ b/gatsby/tutorial-part-three/package.json
@@ -10,9 +10,7 @@
   "dependencies": {
     "gatsby": "^1.4.1",
     "gatsby-link": "^1.4.1",
-    "gatsby-plugin-glamor": "^1.6.0",
-    "gatsby-plugin-styled-components": "^1.0.1",
-    "typography-theme-bootstrap": "^0.15.10",
-    "typography-theme-lawton": "^0.15.10"
+    "gatsby-plugin-typography": "^1.7.2",
+    "typography-theme-fairy-gates": "^0.15.11"
   }
 }
